[metadata]
name = colosseum-arena
version = 1.0.0
author = h3nnn4n
author_email = colosseum@h3nnn4n.me
description = A framework for automated tournament of AI Agents
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/h3nnn4n/colosseum
project_urls =
    Bug Tracker = https://github.com/h3nnn4n/colosseum/issues
classifiers =
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Development Status :: 4 - Beta
    Intended Audience :: Developers

[options]
package_dir =
    = colosseum
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src
