[tool.poetry]
name = "agents"
version = "0.1.0"
description = "Sample agents for colosseum"
authors = ["h3nnn4n <colosseum@h3nnn4n.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.10"
pexpect = "^4.8.0"
numpy = "^1.21.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
